Comp. images, image change, test fixes, contrast.

--- a/index.css
+++ b/index.css
@@ -89,7 +89,7 @@ h1,
     text-align: center;
     width: 100%;
     height: 100vh;
-    background-image: url('images/pizzeria.jpg');
+    background-image: url('images/oppettiderbakgrund.jpg');
     background-size: cover;
     background-position: center;
     padding-top: 70px;
@@ -97,9 +97,13 @@ h1,
 
 #openHoursInfo {
     font-size: 4rem;
-    color: #fff;
+    color: #ffffff;
     padding-bottom: 40px;
     margin: 5%;
+}
+
+#openHoursTitle {
+    color: #818080;
 }
 
 /* The follwing styling is for the Find Us page */
